--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  ul
+    each message in messages
+      li
+        strong= message.user
+        | : #{message.text} - #{message.added}
