--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,36 +1,127 @@
-:root {
-  --black: #212529;
-}
-
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: var(--black);
+  color: white;
+  background-color: #212d40;
 }
 
 .message-board {
-  border: solid 2px var(--black);
+  background-color: #364156;
+  box-shadow: 5px 5px 10px #252e3c;
   border-radius: 10px;
-  width: 30vw;
+  width: 40vw;
+  height: 75vh;
+  overflow-y: auto;
   padding: 20px;
+  margin-bottom: 20px;
 }
 
 .messages {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  overflow-y: auto;
-  height: 80vh;
 }
 
 .message-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.message-header strong {
+  color: #beb2ff;
+}
+
+.message-header span {
+  color: rgb(240, 240, 240);
+  font-size: 15px;
 }
 
 .message {
   padding: 0px 20px;
+  overflow-x: hidden;
+}
+
+.message .message-text {
+  word-wrap: break-word;
+}
+
+.new-message-form {
+  background-color: #364156;
+  box-shadow: 5px 5px 10px #252e3c;
+  padding: 20px;
+  border-radius: 10px;
+  width: 20vw;
+}
+
+.new-message-form form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 20px;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  gap: 10px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  background-color: #0d1b2a;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding: 15px 25px;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: 0.1s ease-in-out;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0f2031;
+}
+
+a {
+  text-decoration: none;
+}
+
+input {
+  padding: 10px;
+  font-size: 1rem;
+  background-color: #212d40;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
+
+textarea {
+  padding: 10px;
+  font-size: 1rem;
+  background-color: #212d40;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  resize: none;
+  height: 100px;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+}
+
+::placeholder {
+  color: whitesmoke;
 }
