--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,9 +1,10 @@
 doctype html
-html
+html(lang="en")
   head
     title= title
+    meta(name='viewport' content='width=device-width, initial-scale=1')
+    meta(name='description' content='Mini Message Board made with Express for The Odin Project')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='icon', href='/images/message.ico', type='image/x-icon')
-
   body
     block content
